2008-09-01  Jb Evain  <jbevain@novell.com>

	* MemberBinding.cs: make .ctor protected.

2008-09-01  Jb Evain  <jbevain@novell.com>

	* Expression.cs: guard against null parameters passed to Lambda.

2008-08-07  Jb Evain  <jbevain@novell.com>

	* Expression.cs (GetAssociatedProperty): strengthen accessors
	comparisons.

2008-08-02  Zoltan Varga  <vargaz@gmail.com>

	* BinaryExpression.cs (EmitBinaryOperator): Mask out the upper bits of the
	shift amount like mcs compiled code does.

2008-07-19  Jb Evain  <jbevain@novell.com>

	* Expression.cs (Call, Field, Property): disallow instance arguments
	on static members. See ms connect #339351.

2008-07-18  Jb Evain  <jbevain@novell.com>

	* Expression.cs, BinaryExpression.cs: fix retrieval of true and false
	operators.

2008-06-20  Jb Evain  <jbevain@novell.com>

	* LambdaExpression.cs, EmitContext.cs: refactor the emit context to
	handle the fact that lambdas are compiled in a general context where
	they share globals but are also able to use parameters from parent lambdas.
	(Although parameter sharing is not implemented yet).

	* BinaryExpression.cs (fix converted coalesce case to use the lambda
	compilation code).

2008-06-09  Jb Evain  <jbevain@novell.com>

	* Extensions.cs (Type.IsExpression): add
	* Expression.cs (CheckMethodArguments): modify the argument list
	to quote arguments when if necessary.


2008-06-09  Jb Evain  <jbevain@novell.com>

	* Expression.cs (CheckLambda): quote body if required.

2008-06-07  Jb Evain  <jbevain@novell.com>

	* BinaryExpression.cs (EmitConvertedCoalesce): implement.

2008-06-05  Jb Evain  <jbevain@novell.com>

	* Expression.cs (GetUserConversionMethod): check for convertion
	operators on both types.

2008-06-05  Jb Evain  <jbevain@novell.com>

	* Expression.cs (ConditionalBinaryCheck): if a method is passed,
	checked that the operators true and false are also defined.

2008-06-05  Jb Evain  <jbevain@novell.com>

	* BinaryExpression.cs (Emit): deal with binary expressions